--- a/BusDayCounterTests/BusinessDayUtility.Tests.csproj
+++ b/BusDayCounterTests/BusinessDayUtility.Tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BusinessDayCounter\BusinessDayCounter.csproj" />
+    <ProjectReference Include="..\BusinessDayCounter\BusinessDayUtility.csproj" />
   </ItemGroup>
 
 </Project>
